index.html created for git page and safari grid gap fix implemented

--- a/landerStylesGrid.css
+++ b/landerStylesGrid.css
@@ -82,6 +82,12 @@
     
 }
 
+
+/* Just for Safari - prevents odd stretching when gap is enabled */
+.container-child {
+    height:100%;
+}
+
 .container-child:hover{
     cursor: pointer;
     opacity: 0.9;
@@ -94,6 +100,17 @@
     100% { opacity: 1; }
   }
 
+@media only screen and (min-width: 320px) and (max-width: 640px){
+    body {
+        background-color: red;
+    }
+}
+
+@media only screen and (min-width: 1024px){
+    body {
+        background-color: green;
+    }
+}
 #item1{
     grid-column-start: 1;
     grid-column-end: 3;
